gitops/monitoring/grafana-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-prefix
  namespace: monitoring
spec:
  addPrefix:
    prefix: ""
